- Added new white icons for Home, Drinks and Food in nav_menu - Updated BottomNavigationView to use the new icons - Confirmed consistent appearance on Home and Menu screens - Removed old placeholder icons

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -153,6 +153,7 @@
             app:menu="@menu/nav_menu"
             app:itemIconTint="@android:color/white"
             app:itemTextColor="@android:color/white"
-            app:labelVisibilityMode="labeled" />
+            app:labelVisibilityMode="labeled"
+            app:itemActiveIndicatorStyle="@style/BottomNavActiveIndicatorStyle" />
 
 </LinearLayout>
