--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/menu_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/padding_m"
         android:background="@drawable/bg_design"
         tools:context=".MenuActivity">
 
-    <!-- ===== TITLE ===================================== -->
+    <!-- ===== MENU TITLE ===================================== -->
     <TextView
             android:id="@+id/menu_title_top"
             android:layout_width="match_parent"
@@ -18,6 +18,7 @@
             android:textColor="@color/text_primary"
             android:textSize="@dimen/text_xl"
             android:gravity="center"
+            android:layout_marginTop="@dimen/margin_m"
             android:layout_marginBottom="@dimen/margin_m" />
 
     <!-- ===== MENU RECYCLER ============================= -->
@@ -27,7 +28,21 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:clipToPadding="false"
+            android:paddingStart="@dimen/padding_m"
+            android:paddingEnd="@dimen/padding_m"
             android:paddingBottom="@dimen/padding_m"
             tools:listitem="@layout/card_menu_container" />
+
+    <!-- ===== BOTTOM NAVIGATION (FOOTER) ====================== -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/neutral_600"
+            app:menu="@menu/nav_menu"
+            app:itemIconTint="@android:color/white"
+            app:itemTextColor="@android:color/white"
+            app:labelVisibilityMode="labeled"
+            app:itemActiveIndicatorStyle="@style/BottomNavActiveIndicatorStyle" />
 
 </LinearLayout>
