--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_home"
             android:title="@string/nav_home" />
 
     <item
             android:id="@+id/nav_drinks"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_drinks"
             android:title="@string/nav_drinks" />
 
     <item
             android:id="@+id/nav_food"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_food"
             android:title="@string/nav_food" />
 
 </menu>
