Refactor: Convert HomeActivity into HomeFragment and use MainActivity as fragment host

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/bg_design"
-        tools:context=".HomeActivity">
+        tools:context=".MainActivity">
 
     <!-- ===== SCROLLABLE CONTENT =============================== -->
     <androidx.core.widget.NestedScrollView
